# multilabel-instrument-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: download_data.py  evaluate.py  preprocess.py  train.py
src/instrument_classifier/: __init__.py  evaluate.py  features.py  metrics.py  train.py  utils.py  windowing.py
src/instrument_classifier/data/: dataset.py  labels.py  transforms.py
src/instrument_classifier/models/: multibranch.py
