[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilabel-instrument-classifier"
version = "0.1.0"
description = "Musical instrument recognition on IRMAS with a multi-input CNN (mel/CQT/waveform/chroma) and ImageNet-pretrained backbones"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]


[project.scripts]
irmas-train = "instrument_classifier.train:main"
irmas-eval = "instrument_classifier.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

